Implement video screen.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             <p><b>Ver mais</b></p>
         </div>
     </div>
+    <div class="div-video-demo">
+        <div class="div-video-demo-titulo">
+            <p><b>Confira nossos produtos</b></p>
+        </div>
+        <div class="div-video-demo-video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Yv2KFeS2a5E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
 </body>
 
 </html>
