--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Super Cakes</title>
 
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
@@ -81,6 +82,82 @@
         </div>
         <div class="div-video-demo-video">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Yv2KFeS2a5E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div class="div-depoimentos">
+        <div class="div-depoimentos-card-button-back">
+            <img src="img/next.jpg" />
+        </div>
+        <div class="div-depoimentos-card">
+            <div class="card p-3">
+                <blockquote class="blockquote mb-0 card-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer class="blockquote-footer">
+                        <small class="text-muted">
+                      Alguém famoso em <cite title="Título da fonte">Título da fonte</cite>
+                    </small>
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+        <div class="div-depoimentos-card-button-next">
+            <img src="img/next.jpg" />
+        </div>
+    </div>
+    <div class="div-contact">
+        <div class="div-contact-card">
+            <div class="div-contact-card-title">
+                <p>Fale com a gente</p>
+            </div>
+            <div class="div-contact-card-content">
+                <p>supercakes@gmail.com</p>
+            </div>
+        </div>
+        <div class="div-contact-card">
+            <div class="div-contact-card-title">
+                <p>Curitiba</p>
+            </div>
+            <div class="div-contact-card-content">
+                <p>Rua Marechal Floriano Peixoto, 3560</p>
+                <p>Parolin</p>
+                <p>34980-569</p>
+            </div>
+        </div>
+        <div class="div-contact-card">
+            <div class="div-contact-card-title">
+                <p>Porto Alegre</p>
+            </div>
+            <div class="div-contact-card-content">
+                <p>Rua das Camélias, 456</p>
+                <p>Roseira</p>
+                <p>56320-678</p>
+            </div>
+        </div>
+        <div class="div-contact-card">
+            <div class="div-contact-card-title">
+                <p>Florianópolis</p>
+            </div>
+            <div class="div-contact-card-content">
+                <p>Rua Tiradentes, 5643</p>
+                <p>Centro</p>
+                <p>32504-126</p>
+            </div>
+        </div>
+    </div>
+    <div class="div-footer">
+        <div class="div-footer-icons">
+            <div class="div-footer-icons-img">
+                <img src="img/insta.png" />
+            </div>
+            <div class="div-footer-icons-img">
+                <img src="img/face.png" />
+            </div>
+            <div class="div-footer-icons-img">
+                <img src="img/twitter.png" />
+            </div>
+            <div class="div-footer-icons-img">
+                <img src="img/pint.png" />
+            </div>
         </div>
     </div>
 </body>
