Implement login screen.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="div-menu-utils-icon">
                 <img src="img/cart.png" />
             </div>
-            <div class="div-menu-utils-icon">
+            <div class="div-menu-utils-icon" onclick="location.href='html/login.html'">
                 <img src="img/login.jpg" />
             </div>
         </div>
@@ -41,122 +41,122 @@
         <div class="div-menu-wallpaper-message">
             <b>Cadastre-se já, e ganhe 15% de desconto na primeira compra!</b>
         </div>
-        <div class="div-menu-wallpaper-button">
+        <div class="div-menu-wallpaper-button" onclick="location.href='html/cadastro.html'">
             <p><b>Cadastre-se!</b></p>
         </div>
     </div>
-    <div class="div-produtos">
-        <div class="div-produtos-titulo">
+    <div class=" div-produtos ">
+        <div class="div-produtos-titulo ">
             <p><b>Best Seller</b></p>
         </div>
-        <diV class="div-produtos-list">
-            <div class="div-produtos-list-item">
-                <img src="img/bolocenouravulcao.jpeg" />
-                <div class="div-produtos-list-item-title">
+        <diV class="div-produtos-list ">
+            <div class="div-produtos-list-item ">
+                <img src="img/bolocenouravulcao.jpeg " />
+                <div class="div-produtos-list-item-title ">
                     <p>Bolo de cenoura vulcão</p>
                 </div>
-                <div class="div-produtos-list-item-preco">R$ 35,00 kg</div>
+                <div class="div-produtos-list-item-preco ">R$ 35,00 kg</div>
             </div>
-            <div class="div-produtos-list-item">
-                <img src="img/chocolateCmorangos.jpeg" />
-                <div class="div-produtos-list-item-title">
+            <div class="div-produtos-list-item ">
+                <img src="img/chocolateCmorangos.jpeg " />
+                <div class="div-produtos-list-item-title ">
                     <p>Bolo de chocolate com morango</p>
                 </div>
-                <div class="div-produtos-list-item-preco">R$ 29,99 kg</div>
+                <div class="div-produtos-list-item-preco ">R$ 29,99 kg</div>
             </div>
-            <div class="div-produtos-list-item">
-                <img src="img/sonhodevalsa.jpeg" />
-                <div class="div-produtos-list-item-title">
+            <div class="div-produtos-list-item ">
+                <img src="img/sonhodevalsa.jpeg " />
+                <div class="div-produtos-list-item-title ">
                     <p>Bolo de sonho de valsa</p>
                 </div>
-                <div class="div-produtos-list-item-preco">R$ 39,99 kg</div>
+                <div class="div-produtos-list-item-preco ">R$ 39,99 kg</div>
             </div>
         </diV>
-        <div class="div-produtos-mais-op">
+        <div class="div-produtos-mais-op ">
             <p><b>Ver mais</b></p>
         </div>
     </div>
-    <div class="div-video-demo">
-        <div class="div-video-demo-titulo">
+    <div class="div-video-demo ">
+        <div class="div-video-demo-titulo ">
             <p><b>Confira nossos produtos</b></p>
         </div>
-        <div class="div-video-demo-video">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Yv2KFeS2a5E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="div-video-demo-video ">
+            <iframe width="100% " height="100% " src="https://www.youtube.com/embed/Yv2KFeS2a5E " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
         </div>
     </div>
-    <div class="div-depoimentos">
-        <div class="div-depoimentos-card-button-back">
-            <img src="img/next.jpg" />
+    <div class="div-depoimentos ">
+        <div class="div-depoimentos-card-button-back ">
+            <img src="img/next.jpg " />
         </div>
-        <div class="div-depoimentos-card">
-            <div class="card p-3">
-                <blockquote class="blockquote mb-0 card-body">
+        <div class="div-depoimentos-card ">
+            <div class="card p-3 ">
+                <blockquote class="blockquote mb-0 card-body ">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer">
-                        <small class="text-muted">
-                      Alguém famoso em <cite title="Título da fonte">Título da fonte</cite>
+                    <footer class="blockquote-footer ">
+                        <small class="text-muted ">
+                      Alguém famoso em <cite title="Título da fonte ">Título da fonte</cite>
                     </small>
                     </footer>
                 </blockquote>
             </div>
         </div>
-        <div class="div-depoimentos-card-button-next">
-            <img src="img/next.jpg" />
+        <div class="div-depoimentos-card-button-next ">
+            <img src="img/next.jpg " />
         </div>
     </div>
-    <div class="div-contact">
-        <div class="div-contact-card">
-            <div class="div-contact-card-title">
+    <div class="div-contact ">
+        <div class="div-contact-card ">
+            <div class="div-contact-card-title ">
                 <p>Fale com a gente</p>
             </div>
-            <div class="div-contact-card-content">
+            <div class="div-contact-card-content ">
                 <p>supercakes@gmail.com</p>
             </div>
         </div>
-        <div class="div-contact-card">
-            <div class="div-contact-card-title">
+        <div class="div-contact-card ">
+            <div class="div-contact-card-title ">
                 <p>Curitiba</p>
             </div>
-            <div class="div-contact-card-content">
+            <div class="div-contact-card-content ">
                 <p>Rua Marechal Floriano Peixoto, 3560</p>
                 <p>Parolin</p>
                 <p>34980-569</p>
             </div>
         </div>
-        <div class="div-contact-card">
-            <div class="div-contact-card-title">
+        <div class="div-contact-card ">
+            <div class="div-contact-card-title ">
                 <p>Porto Alegre</p>
             </div>
-            <div class="div-contact-card-content">
+            <div class="div-contact-card-content ">
                 <p>Rua das Camélias, 456</p>
                 <p>Roseira</p>
                 <p>56320-678</p>
             </div>
         </div>
-        <div class="div-contact-card">
-            <div class="div-contact-card-title">
+        <div class="div-contact-card ">
+            <div class="div-contact-card-title ">
                 <p>Florianópolis</p>
             </div>
-            <div class="div-contact-card-content">
+            <div class="div-contact-card-content ">
                 <p>Rua Tiradentes, 5643</p>
                 <p>Centro</p>
                 <p>32504-126</p>
             </div>
         </div>
     </div>
-    <div class="div-footer">
-        <div class="div-footer-icons">
-            <div class="div-footer-icons-img">
-                <img src="img/insta.png" />
+    <div class="div-footer ">
+        <div class="div-footer-icons ">
+            <div class="div-footer-icons-img ">
+                <img src="img/insta.png " />
             </div>
-            <div class="div-footer-icons-img">
-                <img src="img/face.png" />
+            <div class="div-footer-icons-img ">
+                <img src="img/face.png " />
             </div>
-            <div class="div-footer-icons-img">
-                <img src="img/twitter.png" />
+            <div class="div-footer-icons-img ">
+                <img src="img/twitter.png " />
             </div>
-            <div class="div-footer-icons-img">
-                <img src="img/pint.png" />
+            <div class="div-footer-icons-img ">
+                <img src="img/pint.png " />
             </div>
         </div>
     </div>
