--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -1,9 +1,71 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <title>Super Cakes - Signup</title>
+
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
+    <div class="div-signup-root">
+        <img src="../img/wallpaper-login.jpg" />
+        <div class="div-signup">
+            <div class="div-signup-title">
+                <h1 class="h3 mb-3 fw-normal">Cadastrar</h1>
+            </div>
+            <div class="div-signup-form">
+                <div class="div-form-row">
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Nome" aria-label="First name">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Sobrenome" aria-label="Last name">
+                        </div>
+                    </div>
+                </div>
+                <div class="div-form-row">
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Email" aria-label="Email">
+                        </div>
+                    </div>
+                </div>
+                <div class="div-form-row">
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Senha" aria-label="Senha">
+                        </div>
+                    </div>
+                </div>
+                <div class="div-form-row">
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Endereço" aria-label="Endereço">
+                        </div>
+                    </div>
+                </div>
+                <div class="div-form-row">
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Cidade" aria-label="Cidade">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Estado" aria-label="Estado">
+                        </div>
+                        <div class="col">
+                            <input type="number" class="form-control" placeholder="CEP" aria-label="CEP">
+                        </div>
+                    </div>
+                </div>
+                <div class="div-form-btn">
+                    <button onclick="location.href='login.html'" class="w-100 btn btn-lg btn-primary" class="btn" type="button">Cadastrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
