Implement more products screen.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <input class="menu-utils-search-input" type="text" placeholder="Search..." />
             </div>
-            <div class="div-menu-utils-icon">
+            <div class="div-menu-utils-icon" onclick="location.href='html/carrinho.html'">
                 <img src="img/cart.png" />
             </div>
             <div class="div-menu-utils-icon" onclick="location.href='html/login.html'">
@@ -72,7 +72,7 @@
                 <div class="div-produtos-list-item-preco ">R$ 39,99 kg</div>
             </div>
         </diV>
-        <div class="div-produtos-mais-op ">
+        <div class="div-produtos-mais-op" onclick="location.href='html/produtos.html'">
             <p><b>Ver mais</b></p>
         </div>
     </div>
