Implement login script.

--- a/html/login.html
+++ b/html/login.html
@@ -30,12 +30,12 @@
                     <input type="checkbox" value="remember-me"> Lembrar-me
                   </label>
                 </div>
-                <button onclick="location.href='../index.html'" class="w-100 btn btn-lg btn-primary" class="btn" type="button">Entrar</button>
+                <button onclick="login()" class="w-100 btn btn-lg btn-primary" class="btn" type="button">Entrar</button>
                 <button onclick="location.href='cadastro.html'" class="w-100 btn btn-lg btn-primary" class="btn" type="button">Cadastrar</button>
             </form>
         </div>
     </div>
-
+    <script type="text/javascript" src="../js/login.js"></script>
 </body>
 
 </html>
