Implement signup script.

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -19,53 +19,54 @@
                 <div class="div-form-row">
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Nome" aria-label="First name">
+                            <input type="text" class="form-control" placeholder="Nome" aria-label="First name" id="name">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Sobrenome" aria-label="Last name">
-                        </div>
-                    </div>
-                </div>
-                <div class="div-form-row">
-                    <div class="row">
-                        <div class="col">
-                            <input type="text" class="form-control" placeholder="Email" aria-label="Email">
+                            <input type="text" class="form-control" placeholder="Sobrenome" aria-label="Last name" id="lastName">
                         </div>
                     </div>
                 </div>
                 <div class="div-form-row">
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Senha" aria-label="Senha">
+                            <input type="text" class="form-control" placeholder="Email" aria-label="Email" id="email">
                         </div>
                     </div>
                 </div>
                 <div class="div-form-row">
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Endereço" aria-label="Endereço">
+                            <input type="text" class="form-control" placeholder="Senha" aria-label="Senha" id="password">
                         </div>
                     </div>
                 </div>
                 <div class="div-form-row">
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Cidade" aria-label="Cidade">
+                            <input type="text" class="form-control" placeholder="Endereço" aria-label="Endereço" id="address">
+                        </div>
+                    </div>
+                </div>
+                <div class="div-form-row">
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Cidade" aria-label="Cidade" id="city">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Estado" aria-label="Estado">
+                            <input type="text" class="form-control" placeholder="Estado" aria-label="Estado" id="state">
                         </div>
                         <div class="col">
-                            <input type="number" class="form-control" placeholder="CEP" aria-label="CEP">
+                            <input type="number" class="form-control" placeholder="CEP" aria-label="CEP" id="zipCode">
                         </div>
                     </div>
                 </div>
                 <div class="div-form-btn">
-                    <button onclick="location.href='login.html'" class="w-100 btn btn-lg btn-primary" class="btn" type="button">Cadastrar</button>
+                    <button onclick="signup()" class="w-100 btn btn-lg btn-primary" class="btn" type="button">Cadastrar</button>
                 </div>
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="../js/cadastro.js"></script>
 </body>
 
 </html>
