Implement main menu script.

--- a/index.html
+++ b/index.html
@@ -84,23 +84,16 @@
             <iframe width="100% " height="100% " src="https://www.youtube.com/embed/Yv2KFeS2a5E " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
         </div>
     </div>
+    <div class="div-video-demo-titulo ">
+        <p><b>Depoimentos</b></p>
+    </div>
     <div class="div-depoimentos ">
-        <div class="div-depoimentos-card-button-back ">
+        <div class="div-depoimentos-card-button-back" onclick="back()">
             <img src="img/next.jpg " />
         </div>
-        <div class="div-depoimentos-card ">
-            <div class="card p-3 ">
-                <blockquote class="blockquote mb-0 card-body ">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                    <footer class="blockquote-footer ">
-                        <small class="text-muted ">
-                      Alguém famoso em <cite title="Título da fonte ">Título da fonte</cite>
-                    </small>
-                    </footer>
-                </blockquote>
-            </div>
+        <div class="div-depoimentos-card" id="divDepoCard">
         </div>
-        <div class="div-depoimentos-card-button-next ">
+        <div class="div-depoimentos-card-button-next" onclick="next()">
             <img src="img/next.jpg " />
         </div>
     </div>
@@ -160,6 +153,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
