Implement products script.

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -38,92 +38,10 @@
         </div>
     </div>
     <div class="div-produtos-root">
-        <div class=" div-produtos ">
-            <div class="div-produtos-titulo ">
-                <p><b>Produtos</b></p>
-            </div>
-            <diV class="div-produtos-list">
-                <div class="div-produtos-list-produto">
-                    <img src="../img/bolocenouravulcao.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de cenoura vulcão</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 35,00 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-                <div class="div-produtos-list-produto">
-                    <img src="../img/chocolateCmorangos.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de chocolate com morango</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 29,99 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-                <div class="div-produtos-list-produto">
-                    <img src="../img/sonhodevalsa.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de sonho de valsa</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 39,99 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-            </diV>
-
-            <diV class="div-produtos-list">
-                <div class="div-produtos-list-produto">
-                    <img src="../img/bolocenouravulcao.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de cenoura vulcão</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 35,00 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-                <div class="div-produtos-list-produto">
-                    <img src="../img/chocolateCmorangos.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de chocolate com morango</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 29,99 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-                <div class="div-produtos-list-produto">
-                    <img src="../img/sonhodevalsa.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de sonho de valsa</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 39,99 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-            </diV>
-
-            <diV class="div-produtos-list">
-                <div class="div-produtos-list-produto">
-                    <img src="../img/bolocenouravulcao.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de cenoura vulcão</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 35,00 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-                <div class="div-produtos-list-produto">
-                    <img src="../img/chocolateCmorangos.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de chocolate com morango</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 29,99 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-                <div class="div-produtos-list-produto">
-                    <img src="../img/sonhodevalsa.jpeg " />
-                    <div class="div-produtos-list-item-title">
-                        <p>Bolo de sonho de valsa</p>
-                    </div>
-                    <div class="div-produtos-list-produto-preco">R$ 39,99 kg</div>
-                    <div class="div-produtos-list-produto-comprar">Comprar</div>
-                </div>
-            </diV>
+        <div class="div-produtos" id="divProducts">
         </div>
     </div>
+    <script type="text/javascript" src="../js/produtos.js"></script>
 </body>
 
 </html>
