Implement cart screen.

--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -36,6 +36,46 @@
             </div>
         </div>
     </div>
+    <div class="div-cart-root">
+        <div class="div-cart-img">
+            <img src="../img/bolocenouravulcao.jpeg" />
+        </div>
+        <div class="div-cart-info">
+            <div class="div-cart-info-title">
+                <p>Bolo de cenoura vulcão</p>
+            </div>
+            <div class="div-cart-info-content">
+                <p>Quantidade: 2</p>
+            </div>
+            <div class="div-cart-info-content">
+                <p>Preço únitario: R$ 49,99</p>
+            </div>
+        </div>
+    </div>
+    <div class="div-cart-root">
+        <div class="div-cart-img">
+            <img src="../img/bolocenouravulcao.jpeg" />
+        </div>
+        <div class="div-cart-info">
+            <div class="div-cart-info-title">
+                <p>Bolo de cenoura vulcão</p>
+            </div>
+            <div class="div-cart-info-content">
+                <p>Quantidade: 2</p>
+            </div>
+            <div class="div-cart-info-content">
+                <p>Preço únitario: R$ 49,99</p>
+            </div>
+        </div>
+    </div>
+    <div class="div-total-root">
+        <div class="div-total-content">
+            <p>Total</p>
+        </div>
+        <div class="div-total-price">
+            <p>R$ 1000,00</p>
+        </div>
+    </div>
 </body>
 
 </htmL>
