Implement cart script.

--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -11,7 +11,7 @@
 <body>
     <div class="div-header">Super Cakes, mastiga e cospe a concorrência!</div>
     <div class="div-menu">
-        <div class="div-logo">
+        <div class="div-logo" onclick="location.href='../index.html'">
             <img src="../img/icon.png" />
         </div>
         <div class="div-menu-options">
@@ -36,46 +36,9 @@
             </div>
         </div>
     </div>
-    <div class="div-cart-root">
-        <div class="div-cart-img">
-            <img src="../img/bolocenouravulcao.jpeg" />
-        </div>
-        <div class="div-cart-info">
-            <div class="div-cart-info-title">
-                <p>Bolo de cenoura vulcão</p>
-            </div>
-            <div class="div-cart-info-content">
-                <p>Quantidade: 2</p>
-            </div>
-            <div class="div-cart-info-content">
-                <p>Preço únitario: R$ 49,99</p>
-            </div>
-        </div>
+    <div class="div-cart-root" id="divCartRoot">
     </div>
-    <div class="div-cart-root">
-        <div class="div-cart-img">
-            <img src="../img/bolocenouravulcao.jpeg" />
-        </div>
-        <div class="div-cart-info">
-            <div class="div-cart-info-title">
-                <p>Bolo de cenoura vulcão</p>
-            </div>
-            <div class="div-cart-info-content">
-                <p>Quantidade: 2</p>
-            </div>
-            <div class="div-cart-info-content">
-                <p>Preço únitario: R$ 49,99</p>
-            </div>
-        </div>
-    </div>
-    <div class="div-total-root">
-        <div class="div-total-content">
-            <p>Total</p>
-        </div>
-        <div class="div-total-price">
-            <p>R$ 1000,00</p>
-        </div>
-    </div>
+    <script type="text/javascript" src="../js/cart.js"></script>
 </body>
 
 </htmL>
