--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
                 <div class="div-produtos-list-item-title ">
                     <p>Bolo de cenoura vulcão</p>
                 </div>
-                <div class="div-produtos-list-item-preco ">R$ 35,00 kg</div>
+                <div class="div-produtos-list-item-preco ">R$ 35,00</div>
             </div>
             <div class="div-produtos-list-item ">
                 <img src="img/chocolateCmorangos.jpeg " />
                 <div class="div-produtos-list-item-title ">
                     <p>Bolo de chocolate com morango</p>
                 </div>
-                <div class="div-produtos-list-item-preco ">R$ 29,99 kg</div>
+                <div class="div-produtos-list-item-preco ">R$ 29,99</div>
             </div>
             <div class="div-produtos-list-item ">
                 <img src="img/sonhodevalsa.jpeg " />
                 <div class="div-produtos-list-item-title ">
                     <p>Bolo de sonho de valsa</p>
                 </div>
-                <div class="div-produtos-list-item-preco ">R$ 39,99 kg</div>
+                <div class="div-produtos-list-item-preco ">R$ 39,99</div>
             </div>
         </diV>
         <div class="div-produtos-mais-op" onclick="location.href='html/produtos.html'">
