--- a/html/produtos.html
+++ b/html/produtos.html
@@ -12,7 +12,7 @@
 <body>
     <div class="div-header">Super Cakes, mastiga e cospe a concorrência!</div>
     <div class="div-menu">
-        <div class="div-logo">
+        <div class="div-logo" onclick="location.href='../index.html'">
             <img src="../img/icon.png" />
         </div>
         <div class="div-menu-options">
